index.css
/* Font Awesome Imports */
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css');
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/brands.min.css');
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');

/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap');

/* Style Sheets */
@import url(styles/_navbar.css);
@import url(styles/_buttons.css);
@import url(styles/_contact.css);


:root {
    --font    : rgb(255, 241, 242, 0.8);
    --bgfirst : #141211;
    --bgsecond: #100f0e;

    --btn-bg-gradient: linear-gradient(315deg, #ffcfdf, #b0f3f1 74%);
    --bg-gradient    : linear-gradient(180deg, var(--bgfirst), var(--bgsecond) 20%);
}

* {
    margin    : 0;
    padding   : 0;
    box-sizing: border-box;
}

html {
    -webkit-font-smoothing : antialiased;
    -moz-osx-font-smoothing: grayscale;
}

html.sr .load-hidden {
    visibility: hidden;
}

body {
    min-height : 100vh;
    background : var(--bg-gradient);
    color      : var(--font);
    font-family: 'Poppins', system-ui, sans-serif;
    font-size  : 16px;
    font-weight: 400;
}

footer {
    background: var(--btn-bg-gradient);
    color     : var(--bgsecond);
}

form input,
form textarea {
    border-bottom: 3px solid #b0f3f1;
    border-right : 3px solid #b0f3f1;
    color        : #141211;
}

#work,
#contact {
    padding-top: 6rem;
}

.link-icon {
    background: var(--btn-bg-gradient);
}

.mocks {
    position : static;
    max-width: 19rem;
    z-index  : -999;
}

.avatar {
    padding   : 2px;
    background: var(--btn-bg-gradient);
}

.container__about,
.container__projects,
.container__tools,
.container__contact {
    background   : rgb(255 255 255/2%);
    box-shadow   : 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
    border-radius: 2rem;
    border       : 1px solid rgba(0, 0, 0, 0.125);
}

.container {
    width : auto;
    height: min-content;
    margin: 1rem;
}

.home {
    height     : 100vh;
    width      : auto;
    margin     : 0 auto;
    padding    : 5.75rem 1rem 0;
    display    : flex;
    align-items: center;
}

.container__about {
    padding: 2rem 1rem;
}

.container__projects,
.container__contact {
    padding: 1rem;
}

.container__tools {
    width  : 100%;
    margin : 0 auto;
    padding: 1rem;
}


/* Tablet */
@media screen and (min-width: 768px) {
    .mocks {
        max-width: 36rem;
    }

    .home {
        max-width: 680px;
    }

    .container__about {
        max-width: 720px;
        margin   : 3.5rem auto;
        padding  : 2rem;
    }

    .container__projects,
    .container__contact {
        padding: 2rem 3rem;
    }

    .container__tools {
        width  : 80%;
        padding: 2rem;
    }
}

/* Laptop */
@media screen and (min-width: 1024px) {
    .home {
        padding: 5.25rem 1rem 0;
    }

    .container {
        max-width: 1140px;
        margin   : 0 auto;
    }

    .container__about {
        padding: 5rem 8rem;
    }

    .container__projects {
        padding: 3rem 4rem;

    }
}

